--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "sugar-high": "^0.9.3",
     "swr": "^2.3.4",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^20",
